[package]
name = "actix-web-eventsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_web_eventsub"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
futures-util = { version = "0.3", default-features = false }
chrono = "0.4"
hex = "0.4"
bytes = "1.2"
serde_json = "1.0"
pin-project = "1.0"
thiserror = "1.0"

eventsub-common = { path = "../eventsub-common", features = ["actix-http"] }

actix-web-error = "0.2.0"

[dev-dependencies]
actix-web = "4.1"
env_logger = "0.10"
mime = "0.3"
deadpool-redis = { version = "0.10", features = ["rt_tokio_1"] }

[[example]]
name = "basic-actix"
path = "examples/basic_actix.rs"

[[example]]
name = "multiple-actix"
path = "examples/multiple_actix.rs"

[[example]]
name = "redis-actix"
path = "examples/redis_actix.rs"
