[package]
name = "axum-eventsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "axum_eventsub"
path = "src/lib.rs"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
futures-util = { version = "0.3", default-features = false }
chrono = "0.4"
hex = "0.4"
bytes = "1.2"
serde_json = "1.0"
pin-project = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tower-service = "0.3"
tower-layer = "0.3"

eventsub-common = { path = "../eventsub-common" }

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros", "rt-multi-thread"] }

[[example]]
name = "basic-axum"
path = "examples/basic_axum.rs"