[package]
name = "eventsub-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git", rev = "340a582", default-features = false, features = ["eventsub"] }
http = "0.2"
thiserror = "1.0"
hex = "0.4"
chrono = "0.4"
actix-http = { version = "3.2", optional = true }
